<?xml version="1.0"?>
<package format="2">
  <name>ublox_serialization</name>
  <version>2.2.0</version>
  <description>

     ublox_serialization provides header files for serialization of ROS messages to and from u-blox message format.

  </description>
  <author>muhammad abdelmoniem</author>
  <maintainer email="muhammad.abdelmoniem4@gmail.com">men3m-4</maintainer>
  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
